example/secondfile/objects/DHStatus_Access_Service_Request_Statuse__c.object
<CustomObject>
    <description>DHStatus-Access Service Request Statuse</description>
    <fields>
        <fullName>Action_Mode__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Action Mode</description>
        <label>Action Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Additional Notes</description>
        <label>Additional Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Factor_Indicator__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Bulk Factor Indicator</description>
        <label>Bulk Factor Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_ASR_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- DH-ASR Details</description>
        <label>DHStatus-ASR Details</label>
        <referenceTo>DHStatus_ASR_Details__c</referenceTo>
        <relationshipName>DHStatus_Access_Service_Request_Statuse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <formula>DHStatus_ASR_Details__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatus-Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH_ID__c</fullName>
        <formula>DHStatus_ASR_Details__r.DHStatus_Update_IDH__r.Id</formula>
        <label>DHStatus Update IDH ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIR_Identifier__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-DIR Identifier</description>
        <label>DIR Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Message__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Help Desk Message</description>
        <label>Help Desk Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jeopardy_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Jeopardy Code</description>
        <label>Jeopardy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Circuit_Locations__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Number Of Circuit Locations</description>
        <label>Number Of Circuit Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Sent_Date__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Original Sent Date</description>
        <label>Original Sent Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resent_Date__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Resent Date</description>
        <label>Resent Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Segment Number</description>
        <label>Segment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Of_Error__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Source Of Error</description>
        <label>Source Of Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Record_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Status Record Type</description>
        <label>Status Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Supplement ID</description>
        <label>Supplement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Date_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Update Date Time</description>
        <label>Update Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Version</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Access Service Request Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{00000}</displayFormat>
        <label>DHStatus-Access Service Requests Statuse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Access Service Request Statuse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>